views: recompute omnibox text colors

Resetting the text to the default color is incorrect - OmniboxTextView::SetText
contains logic to apply special colors depending on the type of result. This
change adds a method to OmniboxTextView called ReapplyStyling() which causes
OmniboxTextView to recompute and reapply this text styling.  This is necessary
in high contrast modes because these use different text styling for the selected
or hovered result.

Bug: 865918
Change-Id: Ia2c68e6cb3329b1d58d86dc9f6999420810a9d6d
Reviewed-on: https://chromium-review.googlesource.com/1145136
Reviewed-by: Leonard Grey <lgrey@chromium.org>
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#577519}
Former-commit-id: c50c83b11e7a0dd65b97ce2b8c94e97ee813fbf5